[gd_scene load_steps=11 format=3 uid="uid://bviq1a3p66vqg"]

[ext_resource type="SpriteFrames" uid="uid://bxkfp2rn5j7vw" path="res://entities/player/PlayerSpriteFrames.tres" id="1_sprite_frames"]
[ext_resource type="Script" uid="uid://bphyldp563bht" path="res://entities/player/PlayerController.gd" id="2_player_script"]
[ext_resource type="AudioStream" uid="uid://c33ltjvmttba5" path="res://stages/beach/sounds/walking_in_shallow_water_1.wav" id="3_water_sound_1"]
[ext_resource type="AudioStream" uid="uid://dn4h1i1uhvjks" path="res://stages/beach/sounds/walking_in_shallow_water_2.wav" id="4_water_sound_2"]
[ext_resource type="AudioStream" uid="uid://218r1rnefrgh" path="res://stages/beach/sounds/walking_in_shallow_water_3.wav" id="5_water_sound_3"]
[ext_resource type="Script" uid="uid://db3iwqowpkir4" path="res://entities/player/WaveDetector.gd" id="6_wave_detector"]
[ext_resource type="Script" uid="uid://djoqgbv1uyy6o" path="res://entities/player/WaterSoundPlayer.gd" id="7_water_sound"]
[ext_resource type="Script" uid="uid://da77bvllr04ew" path="res://entities/player/WaveForceVisualizer.gd" id="8_force_viz"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_body"]
radius = 5.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 240.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("2_player_script")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_sprite_frames")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_body")

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_interaction")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(0.5, 0.5)
limit_left = 0
limit_top = 0
limit_right = 10240
limit_bottom = 4320
position_smoothing_enabled = true

[node name="WaterSoundMain" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_water_sound_1")
max_distance = 500.0

[node name="WaterSoundAlt1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_water_sound_2")
volume_db = -6.0
pitch_scale = 0.9
max_distance = 500.0

[node name="WaterSoundAlt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_water_sound_3")
volume_db = -6.0
pitch_scale = 1.1
max_distance = 500.0

[node name="WaveDetector" type="Node" parent="."]
script = ExtResource("6_wave_detector")

[node name="WaterSoundPlayer" type="Node" parent="."]
script = ExtResource("7_water_sound")

[node name="WaveForceVisualizer" type="Node2D" parent="."]
script = ExtResource("8_force_viz")
